<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ui.collections.CollectionCreateActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="top"
            android:layout_marginBottom="50dp"
            android:foregroundGravity="top"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:onClick="backToCollections"
                android:tint="#000000"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="352dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/create_collection_title"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/collection_title"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:text="Name" />

        <EditText
            android:id="@+id/collection_desc"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/description" />

        <Button
            android:id="@+id/button"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/next"
            android:onClick="createCollection" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>